# python-template

./: Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init.sh
src/: main.py
test/: test_main.py
