[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Kei198403 <74121135+Kei198403@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
mypy = "^0.812"
autopep8 = "^1.5.7"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
